--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/animal?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=springboot
+spring.datasource.animal.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.animal.jdbc-url=jdbc:mysql://localhost:3306/animal?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.animal.username=root
+spring.datasource.animal.password=root
+
+spring.datasource.forumArticle.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.forumArticle.jdbc-url=jdbc:mysql://localhost:3306/forumArticle?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.forumArticle.username=root
+spring.datasource.forumArticle.password=root
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
