論壇系統後端 文章後端完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.datasource.animal.jdbc-url=jdbc:mysql://localhost:3306/animal?serverTimez
 spring.datasource.animal.username=root
 spring.datasource.animal.password=root
 
-spring.datasource.forumArticle.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.forumArticle.jdbc-url=jdbc:mysql://localhost:3306/forumArticle?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.forumArticle.username=root
-spring.datasource.forumArticle.password=root
+spring.datasource.forum.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.forum.jdbc-url=jdbc:mysql://localhost:3306/forum?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.forum.username=root
+spring.datasource.forum.password=root
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
