--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/animal?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://animal.mysql.database.azure.com:3306/animal?serverTimezone=Asia/Taipei&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=animal
+spring.datasource.password=Springboot0209
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
-#redis??
-#Redis?????
-spring.redis.host=127.0.0.1
-#Redis???????
-spring.redis.port=6379
-#Redis?????????0?
-spring.redis.database=0  
-#????????????????????
-spring.redis.jedis.pool.max-active=50
-#???????????????????????
-spring.redis.jedis.pool.max-wait=3000
-#???????????
-spring.redis.jedis.pool.max-idle=20
-#???????????
-spring.redis.jedis.pool.min-idle=2
-#??????????
-spring.redis.timeout=5000
+spring.redis.host=animal.redis.cache.windows.net
+spring.redis.password=6OyZrv9IKZlYndvvLk1fJnrhbxkT4sNbZAzCaCFi28c=
+spring.redis.port=6380
+spring.redis.ssl=true
