會員修改 完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Springboot0209
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
-spring.redis.host=animal.redis.cache.windows.net
-spring.redis.password=6OyZrv9IKZlYndvvLk1fJnrhbxkT4sNbZAzCaCFi28c=
-spring.redis.port=6380
-spring.redis.ssl=true
+#spring.redis.host=animal.redis.cache.windows.net
+#spring.redis.password=6OyZrv9IKZlYndvvLk1fJnrhbxkT4sNbZAzCaCFi28c=
+#spring.redis.port=6380
+#spring.redis.ssl=true
